--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body style="background-color:#000000;">
     <p style="font-size: 50px; color:#efefef; text-align: center; margin-top:80px; font-family: 'Varela Round', sans-serif;">Our home ❤️</p>
-    <img width=100% src="images/earth.jpg" alt="My test image">
+    <img width=100% src="earth.jpg" alt="My test image">
     <p style="font-size: 25px; color:#efefef; margin-bottom: 100px; text-align: center; margin-top:80px; font-family: 'Varela Round', sans-serif;">Earth is the planet we live on.<br> It is the third planet from the Sun.<br> It is the only planet known to have life on it.<br> The Earth formed around 4.5 billion years ago.<br> It is one of four rocky planets on the inside of the Solar System.<br> The other three are Mercury, Venus and Mars.</p>
   </body>
 </html>
